# webview-boilerplate

./: .gitignore  freeze.py  main.py  main.spec  package-lock.json  package.json  pyproject.toml  setup.py  tailwind.config.js
src/: app.py  config.py  pages.py
src/api/: __init__.py  api.py  manager.py
src/api/common/: clipboard.py  system.py  window.py
src/api/internal/: clipboard.py  system.py  window.py
src/backend/: api.py  freeze.py  static.py  swal.py  template.py  templating.py  translate.py  utils.py  watcher.py
src/backend/api/: __init__.py  clipboard.py  files.py  window.py
src/backend/api/common/: base.py  system.py  window.py
src/core/: alert.py  logger.py  static.py  template.py  utils.py  watcher.py
src/frontend/: base.html  contextmenu.html  index.html  titlebar.html
src/frontend/components/: file_selector.html
src/frontend/components/internal/: contextmenu.html
src/frontend/static/css/: global.css  input.css  resize.css  style.css
src/frontend/static/internal/: alert.js  contextmenu.js  resize.css  resize.js
src/frontend/static/js/: main.js  swal.js  swalUtils.js
src/frontend/templates/: base.html  index.html
src/frontend/templates/pages/: index.html
src/frontend/templates/static/css/: style.css
src/frontend/templates/static/js/: main.js
