[project]
name = "webview-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2-simple-tags>=0.6.1",
    "jinja2>=3.1.4",
    "psutil>=6.1.0",
    "pywebview>=5.3.2",
]

[dependency-groups]
dev = ["pyinstaller>=6.11.1"]


[tool.ruff.format]
quote-style = 'single'
